--- a/src/app/reporting/reporting.less
+++ b/src/app/reporting/reporting.less
@@ -3,7 +3,7 @@
 .reporting-page {
   max-width: none;
   margin: 0;
-  padding: 0 15px;
+  padding: 2rem 15px 0 15px; // Add top padding since no page header
 
   .page-header {
     padding: 2rem;
