--- a/src/app/reporting/reporting.html
+++ b/src/app/reporting/reporting.html
@@ -66,15 +66,20 @@
                 </div>
               </div>
               @for (cell of row.cells; track $index) {
-                <div 
-                  class="status-cell"
-                  [style.color]="cell.status.color"
-                  [title]="cell.document ? (getDocumentTypeName(cell.document.documentType) + ' - ' + cell.status.status) : 'No document created'"
-                  (click)="openDocumentModal(cell.document)"
-                  [class.clickable]="!!cell.document"
-                >
-                  {{ cell.status.icon }}
-                </div>
+                @if (cell.document) {
+                  <div 
+                    class="status-cell clickable"
+                    [style.color]="cell.status.color"
+                    [title]="getDocumentTypeName(cell.document.documentType) + ' - ' + cell.status.status"
+                    (click)="openDocumentModal(cell.document)"
+                  >
+                    {{ cell.status.icon }}
+                  </div>
+                } @else {
+                  <div class="status-cell empty-cell" style="background-color: #f8f9fa; border: 1px dashed #dee2e6;">
+                    <!-- No icon for missing documents -->
+                  </div>
+                }
               }
             </div>
           }
